# deepvqe-ggml

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  eval.py  export_ggml.py  flake.nix  pyproject.toml  test_model.py  train.py
configs/: default.yaml
data/: dataset.py  synth.py
ggml/: compare.py  deepvqe.cpp
scripts/: check_training.py  download_dns5_full.sh  download_dns5_minimal.sh  entrypoint.sh  pack_squashfs.sh  test_erle.py
src/: align.py  config.py  losses.py  metrics.py  model.py  stft.py  viz.py
